# ml-in-c

./: .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  docusaurus.config.ts  index.html  package-lock.json  package.json  sidebars.api.ts  sidebars.docs.ts  sidebars.notes.ts  sidebars.ts  sitemap.xml
.github/ISSUE_TEMPLATE/: to-do.md
.github/workflows/: build-and-test.yml  generate-and-deploy-docs.yml
api/: wip.md
api/dataframe/: DF_addColumn.md  DF_free.md  DF_fromArray.md  DataFrame.md  index.html  index.md
api/wip/: index.html
assets/css/: styles.5df7d71f.css  styles.f1328570.css  styles.f3561413.css
assets/js/: 01a85c17.8926257d.js  06a85b6f.ea5619c4.js  0a79c4d5.b0b6b9de.js  1112.06756987.js  14eb3368.83b1c924.js  14f9791a.d6809111.js  165.e93a7d94.js  167f4c14.d4a10aa2.js  17896441.171fa914.js  17896441.6b2e3871.js  1bc1667c.09d223f5.js  1df93b7f.1594dc20.js  1df93b7f.b8294030.js  1f391b9e.807b4d02.js  2068.591e5c7d.js  2130.5d3e5e87.js  21c26003.c62e1b58.js  2231.5d14cb0b.js  2237.efe85129.js  2334.517c0c28.js  244.3e4943a5.js  2498.dcbdfb8d.js  300.8e07eec0.js  3388.6cf6155b.js  33fc5bb8.8f66a2c4.js  33fc5bb8.99330c6d.js  3403.92c1f7a0.js  360dc931.234c51b0.js  3624.68e292a0.js  362bc1d5.cb2d75a6.js  3677.86a59628.js  36994c47.ab4ddf28.js  393be207.a08eab9b.js  3956.7fd9c3f5.js  3a77c67a.8357dbb1.js  416.269dbb95.js  433c4366.5d97ab03.js  4504.1e114f84.js  4687.792bcdf7.js  5392.2b3f6ce2.js  (+82 more)
blog/: atom.xml  authors.yml  index.html  rss.xml
blog/2025-09-10-implementing-a-dataframe-in-c/: index.mdx
blog/archive/: index.html
blog/authors/: index.html
blog/tags/: index.html
changelogs/: atom.xml  index.html  rss.xml  v0.0.0.md
changelogs/archive/: index.html
changelogs/tags/: index.html
changelogs/v0.0.0/: index.html
cmake/: uninstall.cmake
docs/getting-started/: installation.mdx  what-is-ml-in-c.md
docs/wip/: index.html
include/core/: error.h  internal.h
include/datatypes/: dataframe.h
markdown-page/: index.html
notes/dataframe/: _category_.json  initial-implementation-notes.md
src/: CMakeLists.txt
src/components/: GiscusComponent.tsx  LatestBlogPost.tsx
src/css/: custom.css
src/datatypes/: dataframe.c
src/pages/: index.module.css  index.tsx
test/: CMakeLists.txt
test/unit/dtypes/col/core/: CMakeLists.txt  test_accessors.c  test_lifecycle.c  test_modifiers.c
(+157 files in other folders)
